--- a/src/pages/mainPage/mainPage.scss
+++ b/src/pages/mainPage/mainPage.scss
@@ -1,7 +1,7 @@
-@import 'mainPageHead.scss';
+@import './mainpageHead/mainPageHead.scss';
 @import 'mainPageContent.scss';
 @import 'mainPageFooter.scss';
-@import 'mainItemDetails';
+
 
 
 .mainContainer {
