error handling, code structure refactoring

--- a/src/pages/mainPage/mainPageContent/mainPageContent.scss
+++ b/src/pages/mainPage/mainPageContent/mainPageContent.scss
@@ -4,8 +4,9 @@
   justify-content: center;
 }
 .noItemsSearched{
-  font-size:8em;
+  font-size:5em;
   display: flex;
   justify-content: center;
+  align-items: center;
   margin: 150px 0 250px 0;
 }
