scss structure refactoring, variables... separation

--- a/src/components/itemCover/itemCover.scss
+++ b/src/components/itemCover/itemCover.scss
@@ -1,4 +1,10 @@
 
+@import "../../style/variables";
 
 
 
+
+  .coverImage {
+    width: 0.25 * $main-block-width;
+    height: 0.4 * $main-block-width;
+  }
