--- a/src/pages/mainPage/mainPageContent/mainPageContent.scss
+++ b/src/pages/mainPage/mainPageContent/mainPageContent.scss
@@ -1,7 +1,10 @@
+@import "../../../style/variables";
+
 .searchResultContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  width: $main-block-width;
 }
 .noItemsSearched{
   font-size:5em;
@@ -9,4 +12,5 @@
   justify-content: center;
   align-items: center;
   margin: 150px 0 250px 0;
+  color: $grey-color;
 }
