add adabtive desighn up to 450

--- a/src/components/backToSearchButton/backToSearchButton.scss
+++ b/src/components/backToSearchButton/backToSearchButton.scss
@@ -1,5 +1,5 @@
 .backToSearchElement {
-    font-size: 1em;
+    font-size: 15px;
     padding: 0.5em 1em 0.5em 1em;
     font-weight: 900;
     color: $red-color-text;
