--- a/src/pages/mainPage/mainPageWrapper/mainPageWrapper.scss
+++ b/src/pages/mainPage/mainPageWrapper/mainPageWrapper.scss
@@ -11,7 +11,14 @@
     width: $main-block-width;
 }
 
+// @media (max-width:1050px){
+//     .mainContainer {
+//        max-width: $main-block-width;
+//     } 
+// }
+
 .mainWrapper {
     display: flex;
     justify-content: center;
+    align-items: center;
   }
