--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -3,6 +3,6 @@ $white-color-text: rgb(207, 211, 214);
 $red-color-text: rgb(226, 40, 86);
 $grey-color: rgb(70, 71, 71);
 $black-color: rgb(20, 20, 20);
-$main-block-width: 100em;
-$center-block-width: 75em;
-$searchFieldPadding: 3em;
+$main-block-width: 1800px;
+$center-block-width: 75%;
+$searchFieldPadding: 3%;
