--- a/src/components/itemCover/itemCover.scss
+++ b/src/components/itemCover/itemCover.scss
@@ -3,8 +3,19 @@
 
 
 
+.coverImage{
+  width: 100%;
+  height: 100%;
+}
 
-  .coverImage {
-    width: 0.25 * $main-block-width;
-    height: 0.4 * $main-block-width;
-  }
+
+.itemWrapper {
+  display: flex;
+  flex-direction: column;
+  width: 0.25 * $main-block-width;
+  margin: 0.1 * 0.25 * $main-block-width;
+}
+
+
+
+
