--- a/src/components/mainItemDetails/itemDescription/itemDescription.scss
+++ b/src/components/mainItemDetails/itemDescription/itemDescription.scss
@@ -1,10 +1,11 @@
 
 @import "../../../style/variables";
+@import "../../../style/fonts-styles.scss";
 
 .itemDescription {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 85%;
 }
 
 
@@ -16,17 +17,11 @@
   margin: 0.035 * $main-block-width;
 }
 
-/// mainItemDetails
-.itemWrapper {
-  display: flex;
-  flex-direction: column;
-  width: 0.25 * $main-block-width;
-  margin: 0.035 * $main-block-width;
-}
+
 
 .bottomItemTextWrapper {
-  padding-top: 1em;
-  margin: 0.5em;
+  padding-top: 1vw;
+  margin: 0.5vw;
 }
 ////
 
@@ -36,19 +31,13 @@
   justify-content: space-between;
 }
 
-.releaseData {
-  padding: 0.15em 0.5em 0.15em 0.5em;
-  max-height: 1.2em;
-  font-size: 1em;
-  margin-top: -0.3em;
-  border: solid 1px $black-color;
-}
+
 
 .backToSearchButton {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 3em;
+  margin: 3vw;
 }
 
 .itemContentBlock {
@@ -58,49 +47,12 @@
   align-items: flex-start;
 }
 
-.releaseDateItem,
-.tagLine,
-.overview,
-.budget {
-  margin-bottom: 1em;
-  font-size: 2em;
-  color: $white-color-text;
-}
 
-
-.itemDetailsTitle {
-  font-size: 3em;
-  font-weight: 900;
-  color: $red-color-text;
-}
-
-.releaseDateItem,
-.budget {
-  font-weight: 100;
-  font-size: 1.5em;
-}
-
-.tagLine {
-  font-weight: 900;
-}
-
-.popularityItem {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgb(13, 245, 52);
-  padding: 1em;
-  border-radius: 6em;
-  border: 1px solid rgb(13, 245, 52);
-  margin-left: 1em;
-  max-width: 1.5em;
-  max-height: 1.5em;
-}
 
 .titleItemBlock {
   display: flex;
   align-items: center;
-  margin-bottom: 1em;
+  margin-bottom: 1vw;
 }
 
 .itemCover {
