--- a/src/components/mainItemDetails/itemDescription/itemDescription.scss
+++ b/src/components/mainItemDetails/itemDescription/itemDescription.scss
@@ -1,6 +1,6 @@
 
-@import "../../../style/variables";
-@import "../../../style/fonts-styles.scss";
+@import "../../../styles/variables";
+@import "../../../styles/fonts-styles.scss";
 
 .itemDescription {
   display: flex;
