--- a/src/components/searchField/searchField.scss
+++ b/src/components/searchField/searchField.scss
@@ -1,5 +1,5 @@
-@import "../../style/variables";
-@import "../../style/templates";
+@import "../../styles/variables";
+@import "../../styles/templates";
 
 @media (min-width: 520px) {
   .sortByGroupeButtons {
