--- a/src/pages/mainPage/mainPageWrapper/mainPageWrapper.scss
+++ b/src/pages/mainPage/mainPageWrapper/mainPageWrapper.scss
@@ -1,7 +1,7 @@
 @import '../mainpageHead/mainPageHead.scss';
 @import '../mainPageContent/mainPageContent.scss';
 @import '../mainPageFooter/mainPageFooter.scss';
-@import "../../../style/variables";
+@import "../../../styles/variables";
 
 
 .mainContainer {
